# SIKExtension

./: .gitignore  .gitmodules  AGENTS.md  CNAME  LICENSE  NOTICE  README.md  build.gradle  consumer-rules.pro  gradle.properties  index.html  settings.gradle
.github/workflows/: main.yml  release.yml
SIKAndroid/: README.md  build.gradle  gradle.properties
SIKAndroid/src/main/: AndroidManifest.xml
SIKCore/: LOGBACK.MD  README.md  build.gradle  gradle.properties
SIKCore/src/main/: AndroidManifest.xml
SIKCore/src/main/cpp/: CMakeLists.txt  GlobalDataTempStore.cpp  SIKCore.cpp
SIKEncrypt/: README.md  build.gradle  gradle.properties  proguard-rules.pro
SIKEncrypt/src/main/cpp/: CMakeLists.txt  (+3 more)
SIKEncrypt/src/main/cpp/LibEncrypt/: CMakeLists.txt  aes.h
SIKExtension/: README.md  build.gradle  gradle.properties
SIKImage/: README.md  build.gradle  gradle.properties  proguard-rules.pro
SIKMedia/: README.md  build.gradle  gradle.properties
SIKNet/: README.md  build.gradle  gradle.properties  proguard-rules.pro
SIKNet/src/main/: AndroidManifest.xml
SIKRoute/: README.md  build.gradle  gradle.properties
SIKSensors/: README.md  build.gradle  gradle.properties
SIKSensors/src/main/: AndroidManifest.xml
SKExtension/: README.md  build.gradle  consumer-rules.pro
SKExtension/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
docs/: Api.md
gradle/: maven-publish.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  skextension.cpp  yuvutil.cpp
(+431 files in other folders)
